[gd_scene load_steps=14 format=3 uid="uid://dh8k1b5ujtgp7"]

[ext_resource type="Texture2D" uid="uid://cfwvryrhw4yml" path="res://assets/characters/palyer/animations/player.png" id="1_1o41j"]
[ext_resource type="Script" path="res://assets/characters/palyer/player.gd" id="1_o626p"]
[ext_resource type="Texture2D" uid="uid://bm0d3awh0oihi" path="res://assets/characters/palyer/cross_aim.png" id="3_iu5io"]

[sub_resource type="AtlasTexture" id="AtlasTexture_trskn"]
atlas = ExtResource("1_1o41j")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmo61"]
atlas = ExtResource("1_1o41j")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h81qs"]
atlas = ExtResource("1_1o41j")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtk2w"]
atlas = ExtResource("1_1o41j")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlfef"]
atlas = ExtResource("1_1o41j")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4unr2"]
atlas = ExtResource("1_1o41j")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6ndu"]
atlas = ExtResource("1_1o41j")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4cr4"]
atlas = ExtResource("1_1o41j")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5l0vw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_trskn")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmo61")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_h81qs")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_xtk2w")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_qlfef")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_4unr2")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6ndu")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4cr4")
}],
"loop": true,
"name": &"victory",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8sqt"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_o626p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5l0vw")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.203509

[node name="MarkerAim" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="MarkerAim"]
position = Vector2(15, 0)
gizmo_extents = 50.0

[node name="Sprite2D" type="Sprite2D" parent="MarkerAim/Marker2D"]
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_iu5io")
offset = Vector2(15, 0)

[node name="ShootTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.6
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t8sqt")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
